ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/CASA_Bank_Form__c.object-meta.xml
<CustomObject>
    <label>CASA Bank Form</label>
    <nameField>
        <label>CASA Bank Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CASA Bank Forms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>