ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>CASA Bank Forms</relationshipLabel>
    <relationshipName>CASA_Bank_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>