ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Finacle_City__c.field-meta.xml
<CustomField>
    <fullName>Finacle_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finacle City</label>
    <referenceTo>Finacle_City__c</referenceTo>
    <relationshipLabel>CASA Bank Forms</relationshipLabel>
    <relationshipName>CASA_Bank_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>