ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Geo_State_Master__c.field-meta.xml
<CustomField>
    <fullName>Geo_State_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Geo State Master</label>
    <referenceTo>Geo_State_Masters__c</referenceTo>
    <relationshipLabel>CASA Bank Forms</relationshipLabel>
    <relationshipName>CASA_Bank_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>