ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Nominee_name__c.field-meta.xml
<CustomField>
    <fullName>Nominee_name__c</fullName>
    <label>Nominee name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>