ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Nominee_State__c.field-meta.xml
<CustomField>
    <fullName>Nominee_State__c</fullName>
    <label>Nominee State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>