ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Relationship_with_borrower__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_borrower__c</fullName>
    <label>Relationship with borrower</label>
    <length>20</length>
    <type>Text</type>
</CustomField>