ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Saving_Account_opened_for__c.field-meta.xml
<CustomField>
    <fullName>Saving_Account_opened_for__c</fullName>
    <label>Saving Account opened for</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Co-Borrower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>