ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/Saving_Account_opening_form_No__c.field-meta.xml
<CustomField>
    <fullName>Saving_Account_opening_form_No__c</fullName>
    <label>Saving Account opening form No</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>