ProdIND/ProdPrograms/force-app/main/default/objects/CASA_Bank_Form__c/fields/TeleVerification__c.field-meta.xml
<CustomField>
    <fullName>TeleVerification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TeleVerification</label>
    <referenceTo>TeleVerification__c</referenceTo>
    <relationshipLabel>CASA Bank Forms</relationshipLabel>
    <relationshipName>CASA_Bank_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>